--- a/thanks-style.css
+++ b/thanks-style.css
@@ -19,6 +19,27 @@ h3{
   font-size: 1.3em;
 }
 
+button{
+    border: none;
+    border-radius: 20px;
+    width: 220px;
+    height: 40px;
+    color: white;
+    background-color: #536dfe;
+    transition: opacity 0.5s;
+    box-shadow: -1px 6px 5px 2px rgba(83,109,254,0.43);
+    -webkit-box-shadow: -1px 6px 5px 2px rgba(83,109,254,0.43);
+    -moz-box-shadow: -1px 6px 5px 2px rgba(83,109,254,0.43);
+    font-size: 15px;
+    font-weight: bold;
+  
+    cursor: pointer;
+}
+  
+button:hover{
+opacity: 0.5;
+}
+
 .container{
   background-color: white;
   display: flex;
@@ -37,7 +58,6 @@ h3{
 
 .buttons{
   display: flex;
-  gap:10px;
   align-items: center;
   justify-content: center;
 }
@@ -45,8 +65,6 @@ h3{
 .box{
   width: 300px;
   text-align: center;
-  overflow: hidden;
-  position: relative;
 }
 
 .box img{
@@ -63,27 +81,7 @@ h3{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-
-button{
-  border: none;
-  border-radius: 20px;
-  width: 220px;
-  height: 40px;
-  color: white;
-  background-color: #536dfe;
-  transition: opacity 0.5s;
-  box-shadow: -1px 6px 5px 2px rgba(83,109,254,0.43);
-  -webkit-box-shadow: -1px 6px 5px 2px rgba(83,109,254,0.43);
-  -moz-box-shadow: -1px 6px 5px 2px rgba(83,109,254,0.43);
-  font-size: 15px;
-  font-weight: bold;
-
-  cursor: pointer;
-}
-
-button:hover{
-  opacity: 0.5;
+  opacity: 0;
 }
 
 
@@ -103,5 +101,9 @@ button:hover{
 
   .box img{
     width: 350px;
+  }
+
+  #box-right{
+      margin: 0;
   }
 }
